small refactoring - using new java features - split out HujnaHandlerTest